--- a/src/main/resources/static/scss/styles.css
+++ b/src/main/resources/static/scss/styles.css
@@ -245,6 +245,16 @@ footer.sticky-footer .copyright {
   margin-bottom: 1rem;
 }
 
+#personagem-detalhes {
+  color: #4b538f !important;
+  font-weight: bold;
+  text-decoration: none;
+}
+#personagem-detalhes:hover {
+  color: #363864 !important;
+  text-decoration: underline;
+}
+
 @media (max-height: 768px) {
   .table-entity-lists-wrapper {
     max-height: 420px;
